samples/_failures_safe/1761724882_3b3d89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8d1ecc1.c: In function ‘main’:
./samples/SAFE/__tmp_a8d1ecc1.c:154:12: error: missing terminating " character
  154 |     printf("Compressed size
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a8d1ecc1.c:154:5: error: expected expression at end of input
  154 |     printf("Compressed size
      |     ^~~~~~
./samples/SAFE/__tmp_a8d1ecc1.c:154:5: error: expected declaration or statement at end of input
